# PDF-VLLM

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: benchmark_32b.toml  benchmark_72b.toml  benchmark_7b.toml  benchmark_qwen3_32b.toml  benchmark_qwen3_8b.toml  benchmark_qwen3_8b_high_pixels.toml  benchmark_qwen3_8b_low_pixels.toml  benchmark_samples_180data.txt  clinical_equivalence_rules.yaml  default.toml  domain_lexicon.yaml  wang_record1.toml  wang_record2.toml
docs/: experiment_attempts_review.md  experiment_code_index.md  ollama_migration_map.md
icu_vllm/: __init__.py  apply_high_risk_candidates.py  benchmark.py  config.py  cutter_worker_jin.py  cutter_worker_wang_record1.py  cutter_worker_wang_record2.py  high_risk_column_candidate.py  high_risk_strategy_review.py  image_preprocess.py  inspect.py  iv_clean2x_crop_worker.py  iv_eval.py  json_utils.py  merge.py  observation_eval.py  observation_header_row_probe.py  observation_layered_eval.py  observation_line_probe.py  observation_med_context_prompt_probe.py  observation_pdf_dpi_recognition_probe.py  observation_preprocess_ablation.py  observation_recognition_bottleneck_probe.py  observation_residual_casebook.py  observation_row_prompt_ablation.py  observation_text_reviewer_experiment.py  observation_text_reviewer_tolerant_eval.py  observation_true_clean_crop.py  observation_true_clean_crop_worker.py  observation_verbatim_experiment.py  pdf_render_quality_probe.py  pipeline.py  profiles.py  prompts.py  run.py  target_column_iv_clean2x.py  target_column_iv_rawlines.py  target_column_iv_v3_unit.py  (+3 more)
(+70 files in other folders)
