[project]
name = "icu-vllm"
version = "0.1.0"
description = "Clean vLLM pipeline for ICU nursing record extraction"
requires-python = ">=3.10"
dependencies = [
  "openai",
  "json-repair",
  "openpyxl",
  "pandas==2.2.3",
  "qwen-vl-utils>=0.0.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
